package it.unibo.antsim.agent;

/**
 * The enum Ant role.
 */
public enum AntRole {
    /**
     * Explorer ant role.
     */
    EXPLORER,

    /**
     * Follower ant role.
     */
    FOLLOWER
}
