package it.unibo.antsim.agent;

/**
 * The enum Ant state.
 */
public enum AntState {
    /**
     * The Wandering.
     */
    WANDERING,

    /**
     * The Returning to nest.
     */
    RETURNING_TO_NEST
}
